[package]
name = "rust"
version = "0.1.0"
authors = ["Arthur Silva <arxdsilva@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.0.1"
futures = "0.3.1"
num-bigint-dig = "0.5.0"
num-traits = "0.2.8"